@@ -4,9 +4,9 @@ from rpy2 import robjects
 
 @pytest.fixture(scope='module')
 def set_class_A():
-    robjects.r('setClass("A", representation(a="numeric", b="character"))')
+    robjects.r('methods::setClass("A", representation(a="numeric", b="character"))')
     yield
-    robjects.r('setClass("A")')
+    robjects.r('methods::removeClass("A")')
 
     
 def test_slotnames(set_class_A):
