@@ -4,7 +4,7 @@ Release 3.3.0
 New features
 ------------
 
-- Trying to import an R package that it not installed will now raise an
+- Trying to import an R package that is not installed will now raise an
   exception :class:`rpy2.robjects.packages.PackageNotInstalledError`.
 
 - The R C API functions `void SET_FRAME(SEXP x, SEXP v)`,
@@ -14,6 +14,14 @@ New features
 - The module :mod:`rpy2.situation` can now return `LD_LIBRARY_PATH`
   information about R. For example with
   `python -m rpy2.situation LD_LIBRARY_PATH`
+
+- :meth:`rpy2.robjects.methods.RS4.extends` lists the class names in the
+  inheritance line.
+  
+- The conversion of S4 objects from R to Python allows much more flexibility
+  and better allow the use of independent code converting different classes.
+  The Sphinx documentation contains an example. This should address concerns
+  at the origin of issue #539.
 
 Changes
 -------
@@ -47,7 +55,7 @@ Changes
 -------
 
 - :mod:`pandas` 1.0.0 breaks the conversion layer. A warning
-  is not emitted whenever trying to use `pandas` >= 1.0.
+  is now emitted whenever trying to use `pandas` >= 1.0.
 
 
 Release 3.2.5
